feat: removed skills which were bitrot
